# open-formula

./: Cargo.toml  LICENSE-MIT  README.md  deny.toml
.github/workflows/: lockdown.yml
benches/: library_benchmark.rs
examples/: cli.rs  sheet.rs  sql.rs
fixtures/: func001.ods_  func002.ods  function_names.csv  simple001.ods  simple002.ods  simple003.ods  simple004.ods
src/: conversion.rs  eval.rs  functions.rs  helpers.rs  lib.rs  parser.rs  sql.rs  types.rs  xmlchar.rs
