[package]
name = "open-formula"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.11"
chumsky = "0.9.3"
derive_more = { version = "1.0.0", features = ["full"] }
enum-as-inner = "0.6.0"
log = "0.4.22"
num_enum = "0.7.3"

[dev-dependencies]
regex = "1.11.0"
ariadne = "0.4.1"
dir-test = "0.3.0"
env_logger = "0.11.5"
inquire = "0.7.5"
spreadsheet-ods = "0.22.5"
test-log = "0.2.16"
