[package]
name = "open-formula"
version = "0.1.0"
edition = "2021"

[features]
default = ["large", "sql"]
small = []
medium = ["small"]
large = ["medium"]
sql = ["small"]

[dependencies]
ahash = "0.8.11"
chumsky = "0.11.1"
enum-as-inner = "0.6.0"
log = "0.4.22"
num_enum = "0.7.3"
ryu = "1.0.18"

[dev-dependencies]
regex = "1.11.0"
ariadne = "0.5.1"
dir-test = "0.4.1"
env_logger = "0.11.5"
inquire = "0.9.1"
spreadsheet-ods = "0.25.0"
test-log = "0.2.16"
iai-callgrind = "0.16.0"

[profile.bench]
debug = true

[[bench]]
name = "library_benchmark"
harness = false
