[package]
name = "open-formula"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
default = ["large", "sql"]
small = []
medium = ["small"]
large = ["medium"]
sql = ["small"]

[dependencies]
ahash = "0.8.11"
chumsky = { version = "0.12.0", features = ["pratt"] }
enum-as-inner = "0.7.0"
log = "0.4.22"
num_enum = "0.7.4"
ryu = "1.0.18"

[dev-dependencies]
regex = "1.11.0"
ariadne = "0.6.0"
dir-test = "0.4.1"
env_logger = "0.11.5"
inquire = "0.9.1"
spreadsheet-ods = "1.0"
test-log = "0.2.16"
gungraun = "0.17.2"
csv = "1.4.0"
serde = { version = "1.0.226", features = ["derive"] }

[profile.bench]
debug = true

[[bench]]
name = "library_benchmark"
harness = false
